<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.3</version>
		<relativePath />
	</parent>

	<groupId>com.palmrq.layoff</groupId>
	<artifactId>palmrq-layoff</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<description>Palm RQ Layoff</description>

	<url />
	<licenses>
		<license />
	</licenses>
	<developers>
		<developer />
	</developers>
	<scm>
		<connection />
		<developerConnection />
		<tag />
		<url />
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<java.version>21</java.version>
		
		<log4j.version>2.24.3</log4j.version>
		<jackson.version>2.18.3</jackson.version>

		<auf-rest.version>5.0.0</auf-rest.version>
		<auf-kafka.version>1.0.1</auf-kafka.version>

		<maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
		<maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
		<maven-source-plugin.version>3.3.1</maven-source-plugin.version>
		<maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
	</properties>

	<modules>
		<module>art-ingest</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>me.ehp246</groupId>
				<artifactId>auf-rest</artifactId>
				<version>${auf-rest.version}</version>
			</dependency>
			
			<dependency>
				<groupId>me.ehp246</groupId>
				<artifactId>auf-kafka</artifactId>
				<version>${auf-kafka.version}</version>
			</dependency>
			
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-core</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>com.fasterxml.jackson.module</groupId>
				<artifactId>jackson-module-mrbean</artifactId>
				<version>${jackson.version}</version>
			</dependency>
	
			<dependency>
				<groupId>com.fasterxml.jackson.module</groupId>
				<artifactId>jackson-module-parameter-names</artifactId>
				<version>${jackson.version}</version>
			</dependency>
	
			<dependency>
				<groupId>com.fasterxml.jackson.datatype</groupId>
				<artifactId>jackson-datatype-jsr310</artifactId>
				<version>${jackson.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-log4j2</artifactId>
			</dependency>
			
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
					<configuration>
						<release>${java.version}</release>
						<encoding>${project.build.sourceEncoding}</encoding>
						<compilerArgs>
							<arg>-parameters</arg>
							<arg>-proc:full</arg>
						</compilerArgs>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
					<configuration>
						<systemPropertyVariables>
							<log4j2.configurationFile>
								log4j2-surefire.xml</log4j2.configurationFile>
							<spring.main.banner-mode>off</spring.main.banner-mode>
						</systemPropertyVariables>
						<argLine>-Xshare:off -XX:+EnableDynamicAgentLoading</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>${maven-source-plugin.version}</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${maven-javadoc-plugin.version}</version>
					<configuration>
						<doclint>all,-missing</doclint>
					</configuration>
					<executions>
						<execution>
							<id>attach-javadocs</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>
